# thoth

./: .env.example  .envrc  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  DESIGN.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  LICENCE  NOTICES.md  README.md  RELEASING.md  components.json  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  stylelint.config.js  svelte.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json  skills
.claude/commands/: deploy.md  git-release.md  master  screenshot.md
.claude/hooks/: master
.claude/rules/: 00-project-foundations.md  20-core-audio-patterns.md  20-enhancement-backends.md  20-service-architecture.md  70-concurrency-patterns.md  73-troubleshooting.md  core  master  node  rust  svelte  typescript
.github/prompts/: issue-classification.prompt.yaml
.github/workflows/: auto-label-issues.yaml  auto-label-issues.yml  ci.yaml  release.yaml  release.yml  security-audit.yaml
docs/: automation.md  custom-prompts-guide.md  dictionary.md  getting-started.md  master  troubleshooting.md
docs/architecture/: concurrency-patterns.md  data-model.md  overview.md  service-patterns.md
docs/development/: audio-pipeline.md  linux-setup.md  native-indicator-renderer.md  recording-state-machine.md  update-testing.md
docs/development/benchmarks/: enhancement-latency.jsonl  enhancement-latency.md
docs/diagrams/: architecture.tex
docs/product/: design-principles.md  product-intent.md  success-metrics.md  user-workflows.md
models/: manifest.json
scripts/: bench_enhancement_latency.py  bump-version.sh  fix-permissions.sh  generate_icons.py  loki_backfill.py  mov-to-hero-gif.sh  release.sh  thoth-windows.swift
src/: App.svelte  app.css  app.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: parakeet_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/linux/: thoth.desktop
src-tauri/scripts/: generate_au_spelling.py
src-tauri/src/: app_handle.rs  canonical.rs  clipboard.rs  config.rs  dictionary.rs  error.rs  export.rs  keyboard_capture.rs  keyboard_service.rs  lib.rs  main.rs  modifier_monitor.rs  mouse_tracker.rs  pipeline.rs  ptt.rs  recording_indicator.rs  sound.rs  storage.rs  telemetry.rs  text_insert.rs  traffic_lights.rs  tray.rs
src-tauri/src/audio/: capture.rs  decode.rs  device.rs  format.rs  metering.rs  mod.rs  preview.rs  ring_buffer.rs  vad.rs  vad_recorder.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/control_api/: mod.rs  token_store.rs
src-tauri/src/database/: insights.rs  migrations.rs  mod.rs  schema.rs  transcription.rs  trash.rs
src-tauri/src/enhancement/: anthropic.rs  context.rs  mod.rs  ollama.rs  openai_compat.rs  prompts.rs
src-tauri/src/handsfree/: manager.rs  mod.rs  state.rs
src-tauri/src/mcp_server/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs
src-tauri/src/recording_indicator/: native.rs
src-tauri/src/shortcuts/: conflict.rs  hyprland.rs  linux.rs  manager.rs  mod.rs  portal.rs  wayland_portal.rs
src-tauri/src/transcription/: au_spelling_map.rs  download.rs  filter.rs  fluidaudio.rs  lightning_whisper.rs  manifest.rs  mod.rs  parakeet.rs  whisper.rs
src-tauri/tests/: audio_decode_integration.rs  config_integration.rs  database_integration.rs  export_integration.rs  mcp_transcription_list.rs
src-tauri/tests/fixtures/: tone_440hz.flac  tone_440hz.m4a
src/lib/: utils.ts
src/lib/components/: AIEnhancementSettings.svelte  AboutDialog.svelte  AudioDeviceSelector.svelte  AudioPlayer.svelte  AudioVisualizer.svelte  DateRangePicker.svelte  DictionaryAddModal.svelte  DictionaryEditor.svelte  ExportDialog.svelte  FilterSettings.svelte  HistoryFilterPanel.svelte  HistoryItem.svelte  HistoryList.svelte  HistoryPane.svelte  InsightsPane.svelte  IntegrationsSettings.svelte  LoggingTelemetrySettings.svelte  ModelManager.svelte  OverviewPane.svelte  PerformanceDialog.svelte  ShortcutInput.svelte  StoragePane.svelte  Toaster.svelte  TranscribePane.svelte  UpdateNotificationBanner.svelte  WindowControls.svelte
src/lib/components/common/: EmptyState.svelte  ErrorState.svelte  LoadingState.svelte
src/lib/components/ui/card/: card-footer.svelte  card-header.svelte  card.svelte
src/lib/components/ui/dialog/: dialog-content.svelte  dialog-footer.svelte
src/lib/components/ui/select/: select-separator.svelte
src/lib/components/ui/sonner/: sonner.svelte
src/lib/components/ui/table/: table.svelte
src/lib/dev/: tauri-mock.ts  thoth-mock-data.ts
src/lib/schemas/: dictionary.ts  prompt.ts
src/lib/stores/: clipboard.svelte.ts  config.svelte.ts  dictionary.svelte.ts  history.svelte.ts  pipeline.svelte.ts  settings.svelte.ts  shortcuts.svelte.ts  sound.svelte.ts  toast.svelte.ts  updater.svelte.ts
src/lib/utils/: format.ts  model-name.ts
src/lib/windows/: History.svelte  PromptGuide.svelte  Recorder.svelte  Settings.svelte
src/routes/: +layout.svelte
src/routes/(history)/history/: +layout.svelte  +page.svelte
src/routes/(indicator)/recording-indicator/: +layout@.svelte  +page.svelte
src/routes/prompt-guide/: +page.svelte
