[package]
name = "thoth"
version = "2026.6.3"
description = "Privacy-first, offline-capable voice transcription application"
authors = ["Paul Roberts"]
license = "MIT"
edition = "2021"

[lib]
name = "thoth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
# NOTE: macos-private-api is REQUIRED for transparent windows on macOS - do not remove!
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

# Audio
cpal = "0.17"
hound = "3.5"
rubato = "0.15"
crossbeam-channel = "0.5"
webrtc-vad = "0.4"
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "vorbis", "flac", "wav", "pcm", "isomp4"] }

# Transcription
# Parakeet TDT via Sherpa-ONNX. No library-acquisition method is baked in here:
# the `parakeet-bundled` feature adds `download-binaries` (fetches prebuilt libs
# over the network — used by `pnpm tauri dev` and CI), while a sealed build (Nix)
# enables just `parakeet` and points SHERPA_LIB_PATH at a prebuilt sherpa-onnx.
# macOS additionally links statically (see the macOS target table below) so the
# release bundle stays self-contained.
# default-features = false drops sherpa-rs's own default `download-binaries`, so
# `--features parakeet` alone does NOT hit the network; `parakeet-bundled` adds it.
sherpa-rs = { version = "0.6", default-features = false, optional = true }
# fluidaudio-rs: Apple Neural Engine backend via CoreML (macOS-only, Apple Silicon)
# Forked with platform guards: compiles as no-op on Linux/Windows
fluidaudio-rs = { git = "https://github.com/poodle64/fluidaudio-rs", rev = "97aaf88", optional = true }

# AI Enhancement and Model Downloads
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
bzip2 = "0.5"
tar = "0.4"
sha2 = "0.10"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Local Control API (loopback HTTP server)
axum = "0.8"
tower-http = { version = "0.6", features = ["validate-request", "cors", "trace"] }

# Bundled MCP server (mounts on the same loopback axum router)
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
tokio-util = "0.7"
getrandom = "0.2"

# Persistence
rusqlite = { version = "0.32", features = ["bundled"] }

# Keyboard capture (for shortcut recording)
device_query = "2.1"

# CSV export
csv = "1"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dirs = "6.0"
arboard = "3.4"
enigo = "0.6"
regex = "1.10"
num_cpus = "1.17"

# Desktop-specific (macOS, Windows, Linux)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10"

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
# whisper-rs with Metal GPU acceleration on macOS
whisper-rs = { version = "0.15", features = ["metal"] }
# Statically link Sherpa-ONNX on macOS so the release bundle is self-contained
# (the macOS archive ships the .a files; Linux's does not). Unioned with the
# base sherpa-rs dependency above.
sherpa-rs = { version = "0.6", default-features = false, features = ["static"], optional = true }
cocoa = "0.26"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSNotification", "NSOperation", "NSString", "NSObject", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSButton", "NSResponder", "NSControl", "NSWorkspace"] }
block2 = "0.6"
core-foundation = "0.10"
core-graphics = "0.24"
# Recording-cue playback via AVAudioPlayer: a mixable CoreAudio client, so the
# cue doesn't duck the user's music and isn't clipped when cpal opens the mic.
objc2-avf-audio = { version = "0.3", features = ["AVAudioPlayer"] }
# CoreAudio transport-type detection for Bluetooth avoidance.
objc2-core-audio = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFString"] }

[features]
# `parakeet` is just the code path + the (optional) sherpa-rs dependency; it does
# NOT decide how the Sherpa-ONNX libraries are obtained. `parakeet-bundled` adds
# `download-binaries` (network fetch at build time) and is what dev/CI use via the
# default. A sealed build enables `parakeet` alone and supplies the libraries out
# of band (SHERPA_LIB_PATH) — see flake.nix's package.
default = ["parakeet-bundled", "fluidaudio"]
parakeet = ["dep:sherpa-rs"]
parakeet-bundled = ["parakeet", "sherpa-rs/download-binaries"]
fluidaudio = ["fluidaudio-rs"]
# GPU acceleration for whisper.cpp (mutually exclusive, only use one)
# Use: cargo build --features cuda      for NVIDIA GPUs
# Use: cargo build --features hipblas   for AMD GPUs (ROCm/HIP)
# Use: cargo build --features vulkan    for cross-platform Vulkan (experimental)
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
vulkan = ["whisper-rs/vulkan"]

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
# whisper-rs - GPU features enabled via --features flag
whisper-rs = { version = "0.15", default-features = false }
# XDG Desktop Portal for Wayland global shortcuts
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
# X11 support for display server detection and mouse tracking
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

# Windows - CPU mode with optional GPU via features
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15", default-features = false }
[dev-dependencies]
tempfile = "3.25"
mockito = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
