[package]
name = "thoth"
version = "2026.6.7"
description = "Privacy-first, offline-capable voice transcription application"
authors = ["poodle64"]
license = "MIT"
edition = "2024"
rust-version = "1.87"

[lib]
name = "thoth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri
# NOTE: macos-private-api is REQUIRED for transparent windows on macOS - do not remove!
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"

# Audio
cpal = "0.18"
hound = "3.5"
rubato = "3.0"
audioadapter-buffers = "3.0"
crossbeam-channel = "0.5"
webrtc-vad = "0.4"
symphonia = { version = "0.6", features = ["mp3", "aac", "ogg", "vorbis", "flac", "wav", "pcm", "isomp4"] }

# Transcription
# Official k2-fsa crate. default-features = false drops its built-in `static`
# marker; sherpa-onnx-sys still defaults to static linking when no link feature
# is set (= the `parakeet` feature → CPU, unchanged). The `parakeet-cuda` feature
# switches it to `shared` so a GPU build can link a CUDA-enabled sherpa-onnx via
# the SHERPA_ONNX_LIB_DIR env var. (Linux CI builds without the parakeet feature.)
sherpa-onnx = { version = "1.13", default-features = false, optional = true }
# fluidaudio-rs: Apple Neural Engine backend via CoreML (macOS-only, Apple Silicon).
# WHY the fork, not upstream — reassessed 2026-07-17 against upstream tip 2d10833.
# ONE reason survives: upstream still lacks platform compile-guards (its build.rs
# invokes `swift build` unconditionally and its ffi/mod.rs has no cfg gating), so
# it fails to build on Linux/Windows; the fork gates on
# `#[cfg(all(target_os = "macos", target_arch = "aarch64"))]`.
#
# The two other reasons no longer hold, and are recorded here so they are not
# re-litigated:
#   - "ahead on FluidAudio 0.15.0 vs upstream 0.14.1" is no longer load-bearing.
#     The correctness-critical part — a fresh TdtDecoderState per one-shot call —
#     reached upstream independently via upstream PR #15 (355370e), applied against
#     0.14.1. Same conclusion #79 drew when it closed as "nothing to cherry-pick".
#   - melChunkContext=false was never load-bearing: plan_segments keeps every padded
#     unit under FluidAudio's 15 s single-shot limit (max 14.85 s across the real
#     corpus), so the chunked decoder never fires on either variant.
#
# The fork is now BEHIND upstream on features (~4k lines of diarization/VAD/
# Qwen3-ASR/streaming it never gained), and the API used here — new(),
# is_apple_silicon(), init_asr(), transcribe_file() — exists verbatim upstream, a
# strict superset. Switching back is a drop-in match at the API level.
#
# RETIREMENT CONDITION: replace this with the upstream crate once the platform
# guard is upstream AND in a cut release, verified by the cargo suite plus a real
# end-to-end transcription — not a compile check. Rationale and the scope of the
# unblocking PR: https://github.com/poodle64/fluidaudio-rs#why-this-fork-exists-and-what-would-end-it
# Note this app's CI already builds Linux with `--no-default-features --features
# vulkan`, excluding this feature, so the guard is not load-bearing for our own
# build today. Pinned by tag, not bare rev.
fluidaudio-rs = { git = "https://github.com/poodle64/fluidaudio-rs", tag = "v0.15.0-thoth.1", optional = true }

# AI Enhancement and Model Downloads
# rustls-no-provider avoids aws-lc-sys (fails under -march=armv8-a in CI);
# the ring crate (added below) provides the crypto backend instead.
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "charset", "http2", "system-proxy", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
futures-util = "0.3"
bzip2 = "0.6"
tar = "0.4"
sha2 = "0.11"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Local Control API (loopback HTTP server)
axum = "0.8"
tower-http = { version = "0.6", features = ["validate-request", "cors", "trace"] }
# Constant-time bearer-token comparison (already resolved transitively via the
# TLS stack; promoted to a direct dep for the auth-layer comparison).
subtle = "2.6"

# Bundled MCP server (mounts on the same loopback axum router)
rmcp = { version = "1.7", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1"
tokio-util = "0.7"
getrandom = "0.4"

# Persistence
rusqlite = { version = "0.40", features = ["bundled"] }

# Keyboard capture (for shortcut recording)
device_query = "4.0"

# CSV export
csv = "1"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Rolling file appender for daily log rotation
tracing-appender = "0.2"
# Loki log forwarding layer (optional telemetry export)
# Uses rustls + ring for TLS (no aws-lc-sys, which fails under -march=armv8-a)
tracing-loki = { version = "0.2.7", default-features = false, features = ["rustls", "compat-0-2-1"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dirs = "6.0"
arboard = "3.4"
enigo = "0.6"
open = "5"
regex = "1.10"
rphonetic = "3"
strsim = "0.11"
unicode-normalization = "0.1"
num_cpus = "1.17"
tempfile = "3.25"
hostname = "0.4"

# Desktop-specific (macOS, Windows, Linux)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10"

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
# whisper-rs with Metal GPU acceleration on macOS
whisper-rs = { version = "0.16", features = ["metal"] }
cocoa = "0.26"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSNotification", "NSOperation", "NSString", "NSObject", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSButton", "NSResponder", "NSControl", "NSWorkspace"] }
block2 = "0.6"
core-foundation = "0.10"
core-graphics = "0.25"
# Recording-cue playback via AVAudioPlayer: a mixable CoreAudio client, so the
# cue doesn't duck the user's music and isn't clipped when cpal opens the mic.
objc2-avf-audio = { version = "0.3", features = ["AVAudioPlayer"] }
# CoreAudio transport-type detection for Bluetooth avoidance.
objc2-core-audio = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFString"] }

[features]
default = ["parakeet", "fluidaudio"]
parakeet = ["dep:sherpa-onnx"]
# GPU Parakeet (NVIDIA): links a CUDA-enabled sherpa-onnx (shared). Build with
#   cargo build --no-default-features --features "parakeet-cuda,vulkan"
# and point SHERPA_ONNX_LIB_DIR at the k2-fsa CUDA prebuilt's lib dir. At runtime
# the recognizer requests the `cuda` provider and falls back to CPU if the EP
# isn't available. See flake.nix's `cuda` dev shell which wires this up.
parakeet-cuda = ["parakeet", "sherpa-onnx/shared"]
fluidaudio = ["dep:fluidaudio-rs"]
# GPU acceleration for whisper.cpp (mutually exclusive, only use one)
# Use: cargo build --features cuda      for NVIDIA GPUs
# Use: cargo build --features hipblas   for AMD GPUs (ROCm/HIP)
# Use: cargo build --features vulkan    for cross-platform Vulkan (experimental)
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
vulkan = ["whisper-rs/vulkan"]

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
# whisper-rs - GPU features enabled via --features flag
whisper-rs = { version = "0.16", default-features = false }
# XDG Desktop Portal for Wayland global shortcuts
ashpd = { version = "0.13", default-features = false, features = ["tokio", "global_shortcuts"] }
# X11 support for display server detection and mouse tracking
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

# Windows - CPU mode with optional GPU via features
[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16", default-features = false }
[dev-dependencies]
mockito = "1"
serial_test = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
